force-app/main/default/objects/C360_BISalesOrg__mdt.object
<CustomObject>
    <fields>
        <fullName>CustomerCodeFrom__c</fullName>
        <label>Customer Code From</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerCodeTo__c</fullName>
        <label>Customer Code To</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrganization__c</fullName>
        <label>Sales Organization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>C360 BISalesOrg</label>
    <listViews>
        <fullName>New_All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>CustomerCodeFrom__c</columns>
        <columns>CustomerCodeTo__c</columns>
        <columns>SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <label>New All</label>
    </listViews>
</CustomObject>